operator/pkg/model/ingestion/testdata/gateway/tls_skips_backends_missing_port/input-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: null
  name: platform
  namespace: app-ns
spec:
  gatewayClassName: ""
  listeners:
  - name: tls
    port: 443
    protocol: TLS
status: {}
