operator/pkg/model/ingestion/testdata/gateway/tls_skips_backends_missing_port/input-service.yaml
- metadata:
    creationTimestamp: null
    name: backend
    namespace: app-ns
  spec:
    ports:
    - port: 8080
  status:
    loadBalancer: {}
