operator/pkg/model/ingestion/testdata/gateway/tls_skips_backends_missing_port/input-tlsroute.yaml
- metadata:
    creationTimestamp: null
    name: tls
    namespace: app-ns
  spec:
    parentRefs:
    - name: platform
      sectionName: tls
    rules:
    - backendRefs:
      - name: backend
  status:
    parents: null
