operator/pkg/model/ingestion/testdata/gateway/tls_skips_backends_missing_port/output-listeners.yaml
- hostname: "*"
  mode: Passthrough
  name: tls
  port: 443
  routes:
  - {}
  sources:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: platform
    namespace: app-ns
    version: v1
